--- a/TLDR.html
+++ b/TLDR.html
@@ -4,23 +4,26 @@
 	<meta charset = "utf-8">
 	<meta name = "description" content = "">
 	<meta name = "author" content = "DAZ">
+
 	<title></title>
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src = "js/scripts.js"></script>
 
 </head>
 <body>
-	<header>
-		<h1>TLDR</h1>
-	</header>
-	<script type="text/javascript" src = "js/scripts.js"></script>
-	<textarea id = "input"></textarea>
-	<button id = "enter_button" onclick="main()">Enter</button>
-	
-			<div id = "output_language">
-			</div>
-			<div id = "output_sentiment">
-			</div>
+	<div class="super-wrapper"><div class="wrapper">
+		<header>
+			<h1>TLDR</h1>
+		</header>
+
+		<textarea rows="12" cols="20" id="input" placeholder="Paste your message here!"></textarea><br>
+		<button id="enter_button" onclick="main()">SUBMIT</button>
+
+		<div id="output_language"></div>
+		<div id="output_sentiment"></div>
+	</div></div>
 
 </body>
 </html>
